--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^13.5.0",
+        "@walletconnect/web3-provider": "^1.7.8",
         "@web3-react/core": "^6.1.9",
         "@web3-react/injected-connector": "^6.0.7",
+        "@web3-react/walletconnect-connector": "^6.2.13",
         "axios": "^0.27.2",
         "classnames": "^2.3.1",
         "ethers": "^5.6.7",
